infrastructure/kubernetes/deployments.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-app-blue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app-blue
    spec:
      containers:
      - name: web-app
        image: jamesadarich/james.adarich.com:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-app-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app-green
    spec:
      containers:
      - name: web-app
        image: jamesadarich/james.adarich.com:2.0.0
        ports:
        - containerPort: 80
