infrastructure/kubernetes/staging-deployment-template.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: {staging-deployment-name}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: {staging-deployment-name}
    spec:
      containers:
      - name: web-app
        image: jamesadarich/james.adarich.com:latest
        ports:
        - containerPort: 80
