infrastructure/kubernetes/cluster-ips.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-cluster-blue
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web-app-blue
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-cluster-green
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web-app-green
